# cdn-st-dns

./: .dockerignore  Dockerfile  cf.py  cft.py  comm.py  main.py  pyproject.toml  st.py
.github/workflows/: docker-build.yaml
resources/: Country-only-cn-private.mmdb
