[tool.poetry]
name = "cnd-st-dns"
version = "0.1.0"
description = ""
authors = ["niyoh <zhrh120@gmail.com>"]
# readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
cloudflare = "^2.19.2"
httpx = "^0.27.0"
structlog = "^24.1.0"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
